--- a/checkmarx-ast-eclipse-plugin/pom.xml
+++ b/checkmarx-ast-eclipse-plugin/pom.xml
@@ -1,12 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>checkmarx-ast-eclipse-plugin</artifactId>
-  <packaging>pom</packaging>
-  <name>Checkmarx AST Eclipse Plugin</name>
-  
   <parent>
     <groupId>com.checkmarx.ast.eclipse</groupId>
     <artifactId>checkmarx-eclipse-plugin</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
+  <artifactId>com.checkmarx.eclipse</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <packaging>eclipse-plugin</packaging>
+  
+  
 </project>
