--- a/checkmarx-ast-eclipse-plugin/pom.xml
+++ b/checkmarx-ast-eclipse-plugin/pom.xml
@@ -7,7 +7,8 @@
     <artifactId>checkmarx-eclipse-plugin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>com.checkmarx.eclipse</artifactId>
+  <groupId>com.checkmarx.ast.eclipse</groupId>
+  <artifactId>com.checkmarx.eclipse.plugin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
   
