--- a/com.checkmarx.eclipse.feature/pom.xml
+++ b/com.checkmarx.eclipse.feature/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>checkmarx-eclipse-plugin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
+  <groupId>com.checkmarx.ast.eclipse.feature</groupId>
   <artifactId>com.checkmarx.eclipse.feature</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
