changed javas wrapper

--- a/checkmarx-ast-eclipse-plugin/build.properties
+++ b/checkmarx-ast-eclipse-plugin/build.properties
@@ -9,6 +9,6 @@ bin.includes = plugin.xml,\
                lib/jackson-core-2.12.4.jar,\
                lib/jackson-databind-2.12.4.jar,\
                lib/commons-lang3-3.12.0.jar,\
-               lib/ast-cli-java-wrapper-1.0.18.jar,\
-               .
+               .,\
+               lib/ast-cli-java-wrapper-1.0.22.jar
 source.. = src/
