--- a/checkmarx-ast-eclipse-plugin/.classpath
+++ b/checkmarx-ast-eclipse-plugin/.classpath
@@ -7,13 +7,14 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.5.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.5.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-annotations-2.12.4.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-core-2.12.4.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-databind-2.12.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang3-3.12.0.jar"/>
-	<classpathentry kind="lib" path="lib/ast-cli-java-wrapper-1.0.26.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ast-cli-java-wrapper-1.0.27.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-simple-1.7.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-log4j12-1.7.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jackson-annotations-2.12.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jackson-core-2.12.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jackson-databind-2.12.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="src" path="src/"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
