--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
           git config --global --add safe.directory /tmp/**/*/
 
       - name: Create update site
-        uses: cpina/github-action-push-to-another-repository@v1.4.1
+        uses: cpina/github-action-push-to-another-repository@devel
         env:
           API_TOKEN_GITHUB: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
