--- a/checkmarx-ast-eclipse-plugin/build.properties
+++ b/checkmarx-ast-eclipse-plugin/build.properties
@@ -7,8 +7,8 @@ bin.includes = plugin.xml,\
                lib/slf4j-api-1.7.5.jar,\
                lib/jackson-annotations-2.12.4.jar,\
                lib/jackson-core-2.12.4.jar,\
-               lib/jackson-databind-2.12.4.jar,\
                lib/commons-lang3-3.12.0.jar,\
-               .,\
-               lib/ast-cli-java-wrapper-1.0.34.jar
+               lib/ast-cli-java-wrapper-1.0.34.jar,\
+               lib/jackson-databind-2.13.2.2.jar,\
+               .
 source.. = src/
