--- a/checkmarx-ast-eclipse-plugin/pom.xml
+++ b/checkmarx-ast-eclipse-plugin/pom.xml
@@ -11,6 +11,11 @@
   <artifactId>com.checkmarx.eclipse.plugin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
-  
-  
+  <repositories>
+  	<repository>
+   		<id>eclipse-indigo</id>
+   		<url>http://download.eclipse.org/releases/indigo</url>
+   		<layout>p2</layout>
+	</repository>
+  </repositories>
 </project>
