--- a/pom.xml
+++ b/pom.xml
@@ -116,12 +116,12 @@
 		</plugins>
 	</build>
 
-<repositories>
-	<repository>
-		<id>eclipse-latest</id>
-		<layout>p2</layout>
-		<url>http://download.eclipse.org/releases/latest</url>
-	</repository>
-</repositories>
+	<repositories>
+		<repository>
+			<id>eclipse-latest</id>
+			<layout>p2</layout>
+			<url>https://download.eclipse.org/releases/2021-09</url>
+		</repository>
+	</repositories>
 
 </project>
