--- a/pom.xml
+++ b/pom.xml
@@ -20,22 +20,21 @@
 	<properties>
 		<tycho.version>3.0.0</tycho.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-<!-- 		<maven.compiler.source>1.8</maven.compiler.source> -->
-<!-- 		<maven.compiler.target>1.8</maven.compiler.target> -->
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
-
 	<build>
-	<pluginManagement>
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-p2-director-plugin</artifactId>
-				<version>${tycho.version}</version>
-			</plugin>
-		</plugins>
-	</pluginManagement>
-	
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-director-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
@@ -43,19 +42,19 @@
 				<version>${tycho.version}</version>
 				<extensions>true</extensions>
 			</plugin>
-			
+
 			<plugin>
-	            <groupId>org.eclipse.tycho</groupId>
-	            <artifactId>tycho-surefire-plugin</artifactId>
-	            <version>${tycho.version}</version>
-	            <configuration>
-	              <useUIHarness>true</useUIHarness>
-	              <useUIThread>false</useUIThread>
-	              <product>org.eclipse.sdk.ide</product>
-	              <application>org.eclipse.ui.ide.workbench</application>
-	            </configuration>
-	        </plugin>
-	        
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<useUIHarness>true</useUIHarness>
+					<useUIThread>false</useUIThread>
+					<product>org.eclipse.sdk.ide</product>
+					<application>org.eclipse.ui.ide.workbench</application>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-compiler-plugin</artifactId>
@@ -76,14 +75,12 @@
 						<phase>package</phase>
 						<id>package-feature</id>
 						<configuration>
-						<finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}
-						</finalName>
+							<finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}
+							</finalName>
 						</configuration>
 					</execution>
 				</executions>
-				<!-- <configuration>
-					<format>'v'yyyyMMddHHmm</format>
-				</configuration> -->
+				<!-- <configuration> <format>'v'yyyyMMddHHmm</format> </configuration> -->
 			</plugin>
 
 			<plugin>
@@ -121,6 +118,11 @@
 			<id>eclipse-latest</id>
 			<layout>p2</layout>
 			<url>https://download.eclipse.org/releases/2021-09</url>
+		</repository>
+		<repository>
+			<id>2022-12</id>
+			<layout>p2</layout>
+			<url>https://download.eclipse.org/releases/2022-12</url>
 		</repository>
 	</repositories>
 
