--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
           
       - run: |
           git config --global --add safe.directory /tmp/**/*/
-          git config http.postBuffer 524288000
+          git config --global --add http.postBuffer 524288000
       
       - name: Create update site
         uses: cpina/github-action-push-to-another-repository@main
