--- a/checkmarx-ast-eclipse-plugin/.classpath
+++ b/checkmarx-ast-eclipse-plugin/.classpath
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="lib/jackson-databind-2.13.2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/slf4j-simple-1.7.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/slf4j-log4j12-1.7.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jackson-annotations-2.12.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jackson-core-2.12.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.12.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/ast-cli-java-wrapper-1.0.50.jar"/>
-	<classpathentry kind="src" path="src/"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.13.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.12.4.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.12.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="lib" path="lib/ast-cli-java-wrapper-1.0.50.jar"/>
+	<classpathentry kind="lib" path="C:/Users/HugoMa/Desktop/org.eclipse.mylyn.commons.ui_3.25.2.v20200813-0821.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
