--- a/.github/workflows/ast-scan.yml
+++ b/.github/workflows/ast-scan.yml
@@ -1,4 +1,4 @@
-name: Checkmarx AST Scan
+name: Checkmarx One Scan
 
 on: [ pull_request, workflow_dispatch ]
 
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3.1.0
-      - name: Checkmarx AST CLI Action
+      - name: Checkmarx AST One Action
         uses: checkmarx/ast-github-action@main
         with:
           base_uri: ${{ secrets.BASE_URI }}
