--- a/checkmarx-ast-eclipse-plugin/plugin.xml
+++ b/checkmarx-ast-eclipse-plugin/plugin.xml
@@ -7,7 +7,7 @@
         <page
                 class="com.checkmarx.eclipse.properties.PreferencesPage"
                 id="com.checkmarx.eclipse.properties.preferencespage"
-                name="Checkmarx AST">
+                name="Checkmarx One">
         </page>
     </extension>
     <extension
@@ -18,7 +18,7 @@
              icon="icons/CxFlatLogo12x12.png"
              id="com.checkmarx.eclipse.views.CheckmarxView"
              inject="true"
-             name="Checkmarx AST Scan"
+             name="Checkmarx One Scan"
              restorable="true">
        </view>
        <category
