--- a/checkmarx-ast-eclipse-plugin/build.properties
+++ b/checkmarx-ast-eclipse-plugin/build.properties
@@ -10,5 +10,6 @@ bin.includes = plugin.xml,\
                lib/commons-lang3-3.12.0.jar,\
                lib/ast-cli-java-wrapper-1.0.51.jar,\
                lib/jackson-databind-2.13.2.2.jar,\
+               lib/org.eclipse.mylyn.commons.ui_3.25.2.v20200813-0821.jar,\
                .
 source.. = src/
