--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 				<configuration>
 					<useUIHarness>true</useUIHarness>
 					<useUIThread>false</useUIThread>
+					<useJDK>BREE</useJDK>
 					<product>org.eclipse.sdk.ide</product>
 					<application>org.eclipse.ui.ide.workbench</application>
 				</configuration>
@@ -117,13 +118,18 @@
 		<repository>
 			<id>eclipse-latest</id>
 			<layout>p2</layout>
+			<url>https://download.eclipse.org/releases/latest/</url>
+		</repository>
+		<!-- >repository>
+			<id>eclipse-latest</id>
+			<layout>p2</layout>
 			<url>https://download.eclipse.org/releases/2021-09</url>
 		</repository>
 		<repository>
 			<id>2022-12</id>
 			<layout>p2</layout>
 			<url>https://download.eclipse.org/releases/2022-12</url>
-		</repository>
+		</repository-->
 	</repositories>
 
 </project>
