--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
 			<layout>p2</layout>
 			<url>https://download.eclipse.org/releases/latest/</url>
 		</repository>
-		<!-- >repository>
+		<repository>
 			<id>eclipse-latest</id>
 			<layout>p2</layout>
 			<url>https://download.eclipse.org/releases/2021-09</url>
@@ -129,7 +129,7 @@
 			<id>2022-12</id>
 			<layout>p2</layout>
 			<url>https://download.eclipse.org/releases/2022-12</url>
-		</repository-->
+		</repository>
 	</repositories>
 
 </project>
