--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 				<version>${tycho.version}</version>
 				<extensions>true</extensions>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-versions-plugin</artifactId>
+				<version>${tycho.version}</version>
+			</plugin>
 
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
