--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
+          generate_release_notes: true
           files: ./com.checkmarx.eclipse.site/target/com.checkmarx.eclipse.site-*.zip
           
       - name: Git configuration 
