rename to checkmarx one

--- a/.github/workflows/ast-scan.yml
+++ b/.github/workflows/ast-scan.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3.5.2
-      - name: Checkmarx AST CLI Action
+      - name: Checkmarx One CLI Action
         uses: checkmarx/ast-github-action@main
         with:
           base_uri: ${{ secrets.BASE_URI }}
