--- a/checkmarx-ast-eclipse-plugin/build.properties
+++ b/checkmarx-ast-eclipse-plugin/build.properties
@@ -11,5 +11,7 @@ bin.includes = plugin.xml,\
                lib/ast-cli-java-wrapper-1.0.59.jar,\
                lib/jackson-databind-2.13.2.2.jar,\
                lib/org.eclipse.mylyn.commons.ui_3.25.2.v20200813-0821.jar,\
-               .
+               .,\
+               lib/org.apache.commons.lang_2.6.0.v20220406-2305.jar,\
+               lib/org-eclipse-mylyn-commons-core.jar
 source.. = src/
