--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,34 @@
 name: Release Creation
 
 on:
-  push:
-    tags:
-      - "*"
+  workflow_call:
+    inputs:
+      tag:
+        description: 'Next release tag'
+        required: true
+        type: string
+      rbranch:
+        description: 'Branch to publish development releases'
+        required: false
+        type: string
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Next release tag'
+        required: true
+        type: string
+      rbranch:
+        description: 'Branch to publish development releases'
+        required: false
+        type: string
 
 jobs:
+  deleteDevReleases:
+    uses: Checkmarx/ast-eclipse-plugin/.github/workflows/delete-dev-releases.yml@main
+    with:
+      tag: ${{ inputs.rbranch }}
+    secrets: inherit
+    if: inputs.rbranch
   release:
     runs-on: ubuntu-latest
     steps:
@@ -14,8 +37,20 @@ jobs:
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
+      # Set the tag in an env var
       - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: |
+          echo "RELEASE_VERSION=${{ inputs.tag }}" >> $GITHUB_ENV
+      - name: Create Release Name
+        run: |
+          echo "Creating release name"
+          if [ -z "${{ inputs.rbranch }}" ]; then
+            echo "GH_RELEASE_TAG_NAME=${{ env.RELEASE_VERSION }}" >> $GITHUB_ENV
+            echo "GH_BRANCH_NAME=main" >> $GITHUB_ENV
+          else
+           echo "GH_RELEASE_TAG_NAME=${{ env.RELEASE_VERSION }}-${{ inputs.rbranch }}" >> $GITHUB_ENV
+           echo "GH_BRANCH_NAME=nightly" >> $GITHUB_ENV
+          fi
         
       - name: Set up JDK 8
         uses: actions/setup-java@v3
@@ -40,9 +75,11 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ env.GH_RELEASE_TAG_NAME }}
           generate_release_notes: true
           files: ./com.checkmarx.eclipse.site/target/com.checkmarx.eclipse.site-*.zip
-          
+          prerelease: ${{ inputs.rbranch != '' && inputs.rbranch != null }}
+
       - name: Git configuration 
         run: |
           git config --global safe.directory "/tmp/**/*/"
@@ -58,4 +95,4 @@ jobs:
           destination-repository-username: 'CheckmarxDev'
           destination-repository-name: 'ast-eclipse-plugin-update-site'
           user-email: cylon-bot@checkmarx.com
-          target-branch: nightly
+          target-branch: ${{ env.GH_BRANCH_NAME }}
