--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,10 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>javax.inject</groupId>
+				<artifactId>javax.inject</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 
