--- a/checkmarx-ast-eclipse-plugin/pom.xml
+++ b/checkmarx-ast-eclipse-plugin/pom.xml
@@ -16,4 +16,11 @@
    		<layout>p2</layout>
 	</repository>
   </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+    </dependencies>
 </project>
