--- a/pom.xml
+++ b/pom.xml
@@ -106,4 +106,11 @@
 		</repository>
 	</repositories>
 
+	<dependencies>
+		<dependency>
+			<groupId>jakarta.inject</groupId>
+			<artifactId>jakarta.inject-api</artifactId>
+			<version>1.0.5</version>
+		</dependency>
+	</dependencies>
 </project>
