--- a/checkmarx-ast-eclipse-plugin/pom.xml
+++ b/checkmarx-ast-eclipse-plugin/pom.xml
@@ -9,7 +9,14 @@
   </parent>
   <artifactId>com.checkmarx.eclipse.plugin</artifactId>
   <packaging>eclipse-plugin</packaging>
-  <repositories>
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+    </dependencies>
+    <repositories>
   	<repository>
    		<id>eclipse-indigo</id>
    		<url>http://download.eclipse.org/releases/indigo</url>
