--- a/checkmarx-ast-eclipse-plugin/.classpath
+++ b/checkmarx-ast-eclipse-plugin/.classpath
@@ -4,6 +4,9 @@
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
+		<accessrules>
+			<accessrule kind="accessible" pattern="**/org.eclipse.e4.core.contexts/**"/>
+		</accessrules>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-simple-1.7.5.jar"/>
