--- a/checkmarx-ast-eclipse-plugin/.classpath
+++ b/checkmarx-ast-eclipse-plugin/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -22,4 +22,8 @@
 	<classpathentry exported="true" kind="lib" path="lib/org-eclipse-mylyn-commons-core.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="target/classes"/>
+	<accessrules>
+    	<accessrule kind="accessible" pattern="**/org.eclipse.e4.core.contexts/**"/>
+    	<accessrule kind="accessible" pattern="**/org.eclipse.e4.ui.workbench/**"/>
+    </accessrules>
 </classpath>
