--- a/checkmarx-ast-eclipse-plugin/.classpath
+++ b/checkmarx-ast-eclipse-plugin/.classpath
@@ -2,20 +2,31 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-simple-1.7.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-reload4j-1.7.36.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-annotations-2.12.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-core-2.12.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.12.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/ast-cli-java-wrapper-1.0.64.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ast-cli-java-wrapper-1.0.64.jar" sourcepath="/Users/tamarlevi/.m2/repository/com/checkmarx/ast/ast-cli-java-wrapper/dev/ast-cli-java-wrapper-dev-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-databind-2.13.4.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.mylyn.commons.ui_3.25.2.v20200813-0821.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org.apache.commons.lang_2.6.0.v20220406-2305.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org-eclipse-mylyn-commons-core.jar"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="src" output="bin" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
