--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,10 @@
 			<layout>p2</layout>
 			<url>https://download.eclipse.org/releases/2019-09</url>
 		</repository>
+		  <repository>
+	        <id>eclipse-2024-06</id>
+        	<url>https://p2repository.com/mvn4/eclipse-2024-06/</url>
+   		</repository>
 	</repositories>
 
 	<dependencies>
