--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Run tests with Maven
+      - name: Run tests with Maven and generate coverage report
         env:
           CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
           CX_TENANT: ${{ secrets.CX_TENANT }}
@@ -32,4 +32,11 @@ jobs:
           CX_NOT_MATCH_TEST_PROJECT: ${{ secrets.CX_NOT_MATCH_TEST_PROJECT }}
         run: |
           export DISPLAY=:99.0
-          Xvfb -ac :99 -screen 0 1920x1080x16 & mvn clean install
+          Xvfb -ac :99 -screen 0 1920x1080x16 &
+          mvn clean verify
+
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: jacoco-report
+          path: target/site/jacoco/index.html
