--- a/checkmarx-ast-eclipse-plugin-tests/pom.xml
+++ b/checkmarx-ast-eclipse-plugin-tests/pom.xml
@@ -10,6 +10,31 @@
 	    <groupId>com.checkmarx.ast.eclipse</groupId>
 	    <artifactId>checkmarx-eclipse-plugin</artifactId>
 	    <version>1.0.0-SNAPSHOT</version>
-	 </parent>
+	</parent>
 	  
+	<build>
+		<plugins>
+			<!-- Adding JaCoCo plugin for code coverage -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<executions>
+					<execution>
+						<phase>prepare-agent</phase>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
