--- a/checkmarx-ast-eclipse-plugin-tests/pom.xml
+++ b/checkmarx-ast-eclipse-plugin-tests/pom.xml
@@ -10,6 +10,24 @@
 	    <groupId>com.checkmarx.ast.eclipse</groupId>
 	    <artifactId>checkmarx-eclipse-plugin</artifactId>
 	    <version>1.0.0-SNAPSHOT</version>
-	 </parent>
+	</parent>
+	
+	<dependencies>
+		<dependency>
+			<groupId>com.checkmarx.ast</groupId>
+			<artifactId>ast-cli-wrapper</artifactId>
+			<version>${ast.cli.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.32</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.32</version>
+		</dependency>
+	</dependencies>
 	  
 </project>
