--- a/checkmarx-ast-eclipse-plugin-tests/pom.xml
+++ b/checkmarx-ast-eclipse-plugin-tests/pom.xml
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>com.checkmarx.ast</groupId>
 			<artifactId>ast-cli-wrapper</artifactId>
-			<version>${ast.cli.version}</version>
+			<version>2.0.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
