--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,4 +55,4 @@ jobs:
         run: |
           export DISPLAY=:99.0
           Xvfb -ac :99 -screen 0 1920x1080x16 &
-          mvn clean test -Dtest='**/integration/*Test.java'
+          mvn verify -Dtest.includes="**/integration/*Test.java"
