--- a/checkmarx-ast-eclipse-plugin-tests/pom.xml
+++ b/checkmarx-ast-eclipse-plugin-tests/pom.xml
@@ -36,6 +36,7 @@
                 <configuration>
                     <includes>
                         <include>**/integration/*Test.java</include>
+                        <include>**/ui/*Test.java</include>
                     </includes>
                 </configuration>
             </plugin>
