--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     branches: 
       - main
+
 jobs:
 
   ui-tests:
@@ -18,7 +19,7 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
-      - name: Run Integration Tests
+      - name: Run UI Tests
         env:
           CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
           CX_TENANT: ${{ secrets.CX_TENANT }}
@@ -27,7 +28,7 @@ jobs:
           DISPLAY: :99.0
         run: |
           Xvfb -ac :99 -screen 0 1920x1080x16 &
-          mvn verify -Dtycho.surefire.includes="**/ui/*Test.java"
+          mvn verify -Dtest.includes="**/ui/*Test.java"
     
   integration-tests:
     runs-on: ubuntu-latest
@@ -51,4 +52,4 @@ jobs:
           DISPLAY: :99.0
         run: |
           Xvfb -ac :99 -screen 0 1920x1080x16 &
-          mvn verify -Dtycho.surefire.includes="**/integration/*Test.java"
+          mvn verify -Dtest.includes="**/integration/*Test.java"
